# sk8ai

./: README.md  __init__.py  pyproject.toml  setup.py
Sk8ai/: sk8.py
sk8ai/: __init__.py  sk8.py
src/demo/: mnist.py
src/sk8ai/: __init__.py  maths.py  sk8.py
