[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sk8ai"
version = "1.0.5"
authors = [
  { name="arcvelit", email="louka.f.s@gmail.com" },
]
description = "Modular neural network for classification, regression and other cool stuff"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/arcvelit/sk8ai"
